CSS styling Changes.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
       <span class="inline-block mt-4 text-base text-gray-500 dark:text-gray-400">
         Based in Austin,TX &mdash; available for remote and on-site opportunities.
       </span>
-      <span class="inline-block mt-2 text-base text-gray-500 dark:text-gray-400">
-        Education: B.S. in Electrical and Computer Engineering, Minor in Computer Science from the University of Arizona.
-      </span>
     </p>
   </section>
 
@@ -68,6 +65,9 @@
           I strive to be a developer who loves solving problems and creating things that matter.
           I have experience in frontend, backend, and everything in between. I strive to write elegant, maintainable code and learn continuously.
         </p>
+            <span class="inline-block mt-2 text-base text-white dark:text-gray-400">
+        Education: B.S. in Electrical and Computer Engineering, Minor in Computer Science from the University of Arizona.
+      </span>
       </div>
       <!-- Hobbies -->
       <div class="flex-1 flex flex-col items-center md:items-start">
@@ -89,11 +89,11 @@
     <div class="w-80 h-40 mx-auto mb-6 rounded-full bg-white dark:bg-gray-900 flex items-center justify-center overflow-hidden shadow-lg">
       <img src="assets/images/Systems_Intelligence__Logo.jpg" alt="Alejandro Santos" class="w-full h-full object-cover" />
     </div>
-    <h3 class="text-2xl font-semibold mb-4">Current Position</h3>
+    <h1 class="text-2xl font-semibold mb-4">Current Position</h1>
     <p class="text-gray-600 dark:text-gray-300 mb-4">Currently, I am a Software Engineer at Systems Intelligence LLC.</p>
     <p class="text-lg font-medium">I work on various projects for the United States Army, focusing on software engineering, electrical engineering and platform engineering.
-      We build software from Full stack web applications to embedded systems.
     </p>
+    <p class="text-lg font-medium mt-2">We build software from Full stack web applications to embedded systems.</p>
   </section>  
   <!-- Projects -->
   <section id="projects" class="px-6 py-20 bg-gray-50 dark:bg-gray-800">
@@ -115,6 +115,7 @@
     <h3 class="text-2xl font-semibold mb-4">Contact</h3>
     <p class="text-gray-600 dark:text-gray-300 mb-4">Let's connect. You can reach me at:</p>
     <p class="text-lg font-medium">raul.santos@systemsintelligencellc.com | rsantos4@arizona.edu</p>
+    <p class="text-lg font-medium mt-2">LinkedIn: <a href="https://www.linkedin.com/in/raul-santos-567753122/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alejandro Santos</a></p>
   </section>
 
   <!-- Footer -->
