--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
     <h1 class="text-2xl font-semibold mb-4">Current Position</h1>
     <p class="text-gray-600 dark:text-gray-300 mb-4">Currently, I am a Software Engineer at Systems Intelligence LLC.</p>
-    <p class="text-lg font-medium">I work on various projects for the United States Army, focusing on software engineering, electrical engineering and platform engineering.
+    <p class="text-lg font-medium">I work on various projects for the United States Army, focusing on software engineering.
     </p>
     <p class="text-lg font-medium mt-2">We build software from Full stack web applications to embedded systems.</p>
   </section>  
@@ -259,7 +259,6 @@
       const widthClass = index < 4 ? 'w-[45%]' : 'w-full max-w-xl';
 
     div.className = `border rounded-xl p-4 shadow-lg bg-white dark:bg-gray-700 ${widthClass}`;
-
     div.innerHTML = `
       <div class="tilt-wrapper mb-4">
         <div class="tilt-card">
