--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <ul class="text-gray-700 dark:text-gray-200 list-disc list-inside text-center md:text-left">
           <li>Movies</li>
           <li>Gaming</li>
-          <li>Tinkering</li>
+          <li>Research</li>
           <li>Family</li>
         </ul>
       </div>
@@ -127,8 +127,7 @@
     </div>
     <h1 class="text-2xl font-semibold mb-4">Current Position</h1>
     <p class="text-gray-600 dark:text-gray-300 mb-4">Currently, I am a Software Engineer at Systems Intelligence LLC.</p>
-    <p class="text-lg font-medium">I work on various projects for the United States Army, focusing on software engineering.
-    </p>
+    <p class="text-lg font-medium">I work on various projects for the United States Army, focusing on software engineering while mentoring Soldiers.</p>
     <p class="text-lg font-medium mt-2">We build software from Full stack web applications to embedded systems.</p>
   </section>  
   <!-- Projects -->
@@ -247,7 +246,7 @@
         image: "assets/images/A10-Thunder.jpg"
       },
       {
-        title: "Hear Rate Monitoring System",
+        title: "Heart Rate Monitoring System",
         description: "Designed and implemented a heart rate monitoring system using Arduino and sensors. The system collected heart rate data and displayed it in real-time on an LCD screen. It also included a full stack web interface for remote monitoring, and account management.",
         image: "assets/images/HeartRate.jpg"
       }
