--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <!-- Navbar -->
   <nav class="w-full flex justify-between items-center p-4 shadow-md sticky top-0 bg-white dark:bg-gray-900 z-50">
-    <h1 class="text-xl font-bold">Aluxian's Console</h1>
+    <h1 class="text-xl font-bold">Console Port</h1>
     <div class="space-x-4">
       <a href="#about" class="nav-link hover:underline">About</a>
       <a href="#projects" class="nav-link hover:underline">Projects</a>
