--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
   transform-style: preserve-3d;
 }
 
-/* optional: add slight scale and tilt on hover */
 .tilt-card:hover .tilt-inner {
   transform: rotateY(10deg) rotateX(5deg) scale(1.02);
 }
@@ -92,6 +91,9 @@
       </span>
     </p>
   </section>
+<section>
+  
+</section>
 
   <!-- About & Hobbies -->
   <section class="px-6 py-20 bg-gray-50 dark:bg-gray-800">
@@ -129,16 +131,30 @@
       </div>
     </div>
   </section>
-  <!-- Current Position-->
-  <section id="current-position" class="px-6 py-20 text-center">
-    <div class="w-80 h-40 mx-auto mb-6 rounded-full bg-white dark:bg-gray-900 flex items-center justify-center overflow-hidden shadow-lg">
-      <img src="assets/images/Systems_Intelligence__Logo.jpg" alt="Alejandro Santos" class="w-full h-full object-cover" />
+  <section id="current-position" class="px-6 py-20">
+    <div class="max-w-4xl mx-auto flex flex-col md:flex-row items-center justify-center gap-12">
+      <div class="flex-1 flex flex-col items-center text-center">
+        <div class="w-80 h-40 mb-6 rounded-full bg-white dark:bg-gray-900 flex items-center justify-center overflow-hidden shadow-lg mx-auto">
+          <img src="assets/images/Systems_Intelligence__Logo.jpg" alt="Alejandro Santos" class="w-full h-full object-cover" />
+        </div>
+        <h1 class="text-2xl font-semibold mb-4">Current Position</h1>
+        <p class="text-gray-600 dark:text-gray-300 mb-4">Currently, I am a Senior Software Engineer at Systems Intelligence LLC.</p>
+        <p class="text-lg font-medium">I work on various projects for the United States Army, focusing on software engineering while mentoring Soldiers.</p>
+        <p class="text-lg font-medium mt-2">We build software from Full stack web applications to Embedded System Applications.</p>
+      </div>
+      <div class="flex-1 flex flex-col items-center text-center">
+        <div class="w-80 h-40 mb-6 rounded-full bg-white dark:bg-gray-900 flex items-center justify-center overflow-hidden shadow-lg mx-auto">
+          <img src="assets/images/Cymstar_Logo.jpg" alt="Previous Position" class="w-full h-full object-cover" />
+        </div>
+        <p class="text-gray-600 dark:text-gray-300 mb-4">Previously, I worked at Cymstar as an Electronics Warfare Senior Software Engineer.</p>
+        <p class="text-lg font-medium">I contributed to the development of electronic warfare and simulator software for military training systems.</p>
+        <p class="text-lg font-medium">My work focused on embedded systems, C++/ADA development, and systems engineering.</p>
+        <p class="text-lg font-medium">I also developed and sustained embedded software for the A-10 Thunderbolt II simulator, supporting realistic training for United States Air Force pilots.</p>
+        <div class="mt-4">
+        </div></div>
+      </div>
     </div>
-    <h1 class="text-2xl font-semibold mb-4">Current Position</h1>
-    <p class="text-gray-600 dark:text-gray-300 mb-4">Currently, I am a Software Engineer at Systems Intelligence LLC.</p>
-    <p class="text-lg font-medium">I work on various projects for the United States Army, focusing on software engineering while mentoring Soldiers.</p>
-    <p class="text-lg font-medium mt-2">We build software from Full stack web applications to embedded systems.</p>
-  </section>  
+  </section>
   <!-- Projects -->
   <section id="projects" class="px-6 py-20 bg-gray-50 dark:bg-gray-800">
     <div class="max-w-5xl mx-auto">
@@ -162,26 +178,25 @@
     <p class="text-lg font-medium mt-2">LinkedIn: <a href="https://www.linkedin.com/in/raul-santos-567753122/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alejandro Santos</a></p>
   </section>
 
-  <!-- Footer -->
   <footer class="text-center py-6 text-sm text-gray-500 dark:text-gray-400 border-t border-gray-200 dark:border-gray-700">
     &copy; 2025 Alejandro Santos. All rights reserved.
   </footer>
 
   <script>
-    // Dark mode toggle function
+
     function toggleDarkMode() {
       document.documentElement.classList.toggle('dark');
       localStorage.setItem('theme', document.documentElement.classList.contains('dark') ? 'dark' : 'light');
     }
 
-    // On page load: apply saved theme
+
     window.onload = function () {
       if (localStorage.getItem('theme') === 'dark') {
         document.documentElement.classList.add('dark');
       }
     };
 
-    // Rotating Hero Avatar Images
+
     const heroImages = [
       "assets/images/UA.jpg",
       "assets/images/USAF.jpg",
@@ -208,7 +223,7 @@
     let currentIndexHobbies = 0;
     const heroHobbiesAvatar = document.getElementById('hobbies-avatar');
 
-    // Rotating Hobbies Avatar Images
+
     setInterval(() => {
       heroHobbiesAvatar.style.opacity = 0;
       setTimeout(() => {
@@ -218,7 +233,7 @@
       }, 500);
     }, 5000);
 
-    // Highlight active nav link on scroll
+
     const sections = document.querySelectorAll('section');
     const navLinks = document.querySelectorAll('.nav-link');
     window.addEventListener('scroll', () => {
@@ -237,7 +252,7 @@
       });
     });
 
-    // Project data and render
+
     const projects = [
       {
         title: "Systems Engineering Process Model",
@@ -282,7 +297,7 @@
     });
   </script>
       <script>
-      // Sparkles animation
+
       const sparklesBg = document.getElementById('sparkles-bg');
       const sparkleCount = 30;
       const sparkles = [];
@@ -320,7 +335,6 @@
           left += dx;
           top += dy;
 
-          // Wrap around edges
           if (left < 0) left = 100;
           if (left > 100) left = 0;
           if (top < 0) top = 100;
